Fix config file saving
Comment AAS-TestMap so that it's not selected as part of Random startup maps

--- a/admin-interface/docroot/views/server-config.erb
+++ b/admin-interface/docroot/views/server-config.erb
@@ -356,7 +356,7 @@
             <textarea id="admins-cfg" class="m-2 config-file" file="admins_cfg"><%= @admins_cfg %></textarea>
           </div>
           <div class="tab-pane fade horizontal-expand" id="mapcycle-cfg-tab">
-            <textarea id="mapcycle-cfg" class="m-2 config-file" file="map_cycle_cfg"><%= @mapcycle_cfg %></textarea>
+            <textarea id="mapcycle-cfg" class="m-2 config-file" file="mapcycle_cfg"><%= @mapcycle_cfg %></textarea>
           </div>
           <div class="tab-pane fade horizontal-expand" id="bans-cfg-tab">
             <textarea id="bans-cfg" class="m-2 config-file" file="bans_cfg"><%= @bans_cfg %></textarea>
